kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-app
  template:
    metadata:
      labels:
        app: central-app
    spec:
      containers:
        - name: central-server
          image: alexadjukic/cc-central:2
        - name: central-db
          image: postgres:17.5
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: central-volume
      volumes:
        - name: central-volume
          persistentVolumeClaim:
            claimName: central-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns-app
  template:
    metadata:
      labels:
        app: ns-app
    spec:
      containers:
        - name: ns-server
          image: alexadjukic/cc-city:2
        - name: ns-db
          image: postgres:17.5
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: ns-volume
      volumes:
        - name: ns-volume
          persistentVolumeClaim:
            claimName: ns-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: su-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: su-app
  template:
    metadata:
      labels:
        app: su-app
    spec:
      containers:
        - name: su-server
          image: alexadjukic/cc-city:2
        - name: su-db
          image: postgres:17.5
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: su-volume
      volumes:
        - name: su-volume
          persistentVolumeClaim:
            claimName: su-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kg-app
  template:
    metadata:
      labels:
        app: kg-app
    spec:
      containers:
        - name: kg-server
          image: alexadjukic/cc-city:2
        - name: kg-db
          image: postgres:17.5
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: kg-volume
      volumes:
        - name: kg-volume
          persistentVolumeClaim:
            claimName: kg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: central-service
spec:
  type: ClusterIP
  selector:
    app: central-app
  ports: 
    - name: central-port
      port: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ns-service
spec:
  type: ClusterIP
  selector:
    app: ns-app
  ports: 
    - name: ns-port
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: su-service
spec:
  type: ClusterIP
  selector:
    app: su-app
  ports: 
    - name: su-port
      port: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: kg-service
spec:
  type: ClusterIP
  selector:
    app: kg-app
  ports: 
    - name: kg-port
      port: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: bike-app.com
      http:
        paths:
          - path: /central(/|$)(.*)
          # - path: "/central"
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: central-service
                port:
                  number: 8001
          - path: /ns(/|$)(.*)
          # - path: "/central"
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: ns-service
                port:
                  number: 8000
          - path: /su(/|$)(.*)
          # - path: "/central"
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: su-service
                port:
                  number: 8002
          - path: /kg(/|$)(.*)
          # - path: "/central"
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: kg-service
                port:
                  number: 8003
